force-app/main/default/objects/Trigger_Configuration__c/Trigger_Configuration__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This custom setting is used to control trigger execution behavior</description>
    <label>Trigger Configuration</label>
</CustomObject>