force-app/main/default/objects/Trigger_Configuration__c/fields/Deactivate__c.field-meta.xml
<CustomField>
    <fullName>Deactivate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this field to deactivate trigger</description>
    <inlineHelpText>Check it to Deactivate Trigger</inlineHelpText>
    <label>Deactivate</label>
    <type>Checkbox</type>
</CustomField>