force-app/main/default/objects/Trigger_Configuration__c/fields/Skip_Recursion__c.field-meta.xml
<CustomField>
    <fullName>Skip_Recursion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this field to prevent recursive execution</description>
    <inlineHelpText>Check to prevent recursive execution</inlineHelpText>
    <label>Skip Recursion</label>
    <type>Checkbox</type>
</CustomField>