force-app/main/default/objects/Trigger_Configuration__c/fields/Trigger_Name__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Name__c</fullName>
    <description>Mention Trigger Name which need to be deactivated</description>
    <inlineHelpText>Enter Trigger Name to be Deactivated</inlineHelpText>
    <label>Trigger Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>